# track_invoice_filler

./: pyproject.toml  requirements.txt
src/: manage.py
src/static/css/: styles.css
src/templates/: base.html  create_track_invoice.html  index.html  login.html  success.html
src/track_invoice_filler/: apps.py  forms.py  track_invoice_filler.py  urls.py  views.py
src/trackhome/: asgi.py  settings.py  urls.py  wsgi.py
